[package]
name = "zotexon"
description = "A command-line tool to export a Zotero library to a file."
repository = "https://github.com/fabiofranke/zotexon"
license = "MIT"
version = "0.5.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.53", features = ["derive", "cargo"] }
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.28"
reqwest = { version = "0.12", features = ["native-tls-vendored", "json"] }
serde = "1.0.221"
serde_json = "1.0.145"
serde_variant = "0.1.3"
thiserror = "2.0.16"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
tokio-util = "0.7.16"

[dev-dependencies]
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
assert_matches = "1.5.0"
insta = "1.44.3"
pretty_assertions = "1.4.1"
rstest = "0.26.1"
