[package]
name = "zotexon"
description = "A command-line tool to export a Zotero library to a file."
repository = "https://github.com/fabiofranke/zotexon"
license = "MIT"
version = "0.5.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive", "cargo"] }
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.29"
reqwest = { version = "0.13", features = ["native-tls-vendored", "json"] }
serde = "1.0.228"
serde_json = "1.0.149"
serde_variant = "0.1.3"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tokio-util = "0.7.18"

[dev-dependencies]
assert_cmd = "2.1.2"
assert_fs = "1.1.3"
assert_matches = "1.5.0"
insta = "1.46.1"
pretty_assertions = "1.4.1"
rstest = "0.26.1"
